[package]
name = "codeforces"
version = "0.2.0"
authors = ["Natsu Kagami <natsukagami@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.10.1", features = ["json"] }
tower = "0.3"
