[package]
name = "codeforces"
version = "0.2.1"
authors = ["Natsu Kagami <natsukagami@gmail.com>"]
edition = "2018"
description = "An asynchronous library for talking to the Codeforces API"
license = "MIT"
repository = "https://github.com/natsukagami/rust-codeforces-api"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.10.1", features = ["json"] }
futures-util = "0.3"
futures-timer = "3.0.2"

[dev-dependencies]
tokio = { version = "0.2", features = ["rt-threaded", "macros"] }
