[package]
name = "codeforces"
version = "0.3.1"
authors = ["Natsu Kagami <natsukagami@gmail.com>"]
edition = "2018"
description = "An asynchronous library for talking to the Codeforces API"
license = "MIT"
repository = "https://github.com/natsukagami/rust-codeforces-api"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["json"] }
futures-util = "0.3"
tokio = { version = "1", features = ["time"] }
flume = "0.10"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
